--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,59 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+  --accent-color-1: #dd0031;
+  --color-1: #eee;
+  --color-2: #ccc;
+  --bg-color-1: #222;
+  --bg-color-2: #111;
+}
+.light {
+  --accent-color-1: #dd0031;
+  --color-1: #222;
+  --color-2: #111;
+  --bg-color-1: #eee;
+  --bg-color-2: #ddd;
+}
+.dark {
+  --accent-color-1: #dd0031;
+  --color-1: #eee;
+  --color-2: #ddd;
+  --bg-color-1: #222;
+  --bg-color-2: #111;
+}
+
+html, body, #root {
+  height: 100%;
+}
+body {
+  color: #eee;
+  background-color: #222;
+  color: var(--color-1);
+  background-color: var(bg-color-1);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+#root {
+  text-align: center;
+}
+
+.ui-button {
+  font-size: 1.2em;
+  min-width: 20%;
+  padding: 0 4px;
+  height: 36px;
+  line-height: 36px;
+  border-radius: 6px;
+  display: inline-block;
+  user-select: none;
+  border: 1px solid var(--accent-color-1);
+  color: var(--accent-color-1);
+  background-color: var(--bg-color-1);
+}
+
+.ui-button:hover {
+  cursor: pointer;
+  color: var(--bg-color-1);
+  background-color: var(--accent-color-1);
+}
