--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,3 +1,20 @@
-<p>
-  home works!
-</p>
+<div class="Home">
+  <h3>Home</h3>
+  <div class="Home-section">
+    <p>Sample Angular SPA (Single Page Application), implemented in TypeScript.</p>
+    <p>Demonstrates simple application structure with the usual basic functionality.</p>
+  </div>
+  <div class="Home-section Home-features">
+    <p>Additional features include:</p>
+    <p>Routing with @angular/router</p>
+    <p>State management with ngrx</p>
+    <p>Theming with css variables</p>
+    <p>And a totally awesome game!</p>
+  </div>
+  <div class="Home-section">
+    <p>
+      The icons used are from
+      <a href="https://fontawesome.com">Font Awesome</a>.
+    </p>
+  </div>
+</div>
